# wellLogData

./: CMakeLists.txt
RPackage/: CMakeLists.txt  DESCRIPTION  NAMESPACE
RPackage/R/: basicFilter.R  fearnheadFilter.R  onLoad.R  withoutReplacement.R  withoutReplacementWithVariance.R
RPackage/src/: CMakeLists.txt
RPackage/src/wellLogData/: CMakeLists.txt  basicFilterRPackage.cpp  basicFilterRPackage.h  fearnheadFilterRPackage.cpp  fearnheadFilterRPackage.h  register.cpp  withoutReplacementRPackage.cpp  withoutReplacementRPackage.h  withoutReplacementWithVarianceRPackage.cpp  withoutReplacementWithVarianceRPackage.h
Simulation/: .gitignore  script.R  submitScriptSlurm.sh  summarise.R
SimulationWithVariance/: .gitignore  analyseResults.R  analyseResultsGroups.R  producePlots.R  script.R  submitScriptSlurm.sh
copyText/: CMakeLists.txt
wellLogDataCommon/: CMakeLists.txt  basicFilter.cpp  basicFilter.h  context.cpp  context.h  fearnheadFilter.cpp  fearnheadFilter.h  fearnheadFilterNoOutliers.cpp  fearnheadFilterNoOutliers.h  fearnheadFilterOptimised.cpp  fearnheadFilterOptimised.h  fearnheadGetKappa.cpp  fearnheadGetKappa.h  withoutReplacement.cpp  withoutReplacement.h  withoutReplacementWithVariance.cpp  withoutReplacementWithVariance.h
