cmake_minimum_required(VERSION 3.1)
set(CppFiles context.cpp basicFilter.cpp fearnheadFilter.cpp withoutReplacement.cpp withoutReplacementWithVariance.cpp)
set(HeaderFiles context.h basicFilter.h fearnheadFilter.h withoutReplacement.h withoutReplacementWithVariance.h)

add_library(wellLogDataCommon STATIC ${CppFiles} ${HeaderFiles})
target_include_directories(wellLogDataCommon PUBLIC ${Boost_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/wellLogDataCommon ${IGRAPH_INCLUDES} ${boostGraphExt_include})
target_link_libraries(wellLogDataCommon PUBLIC ${Boost_LIBRARIES} mpfr sampling aliasMethod)

target_compile_definitions(wellLogDataCommon PUBLIC BOOST_ALL_NO_LIB BOOST_ALL_DYN_LINK)
if(WIN32)
	set_target_properties(wellLogDataCommon PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR} PDB_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
	target_link_libraries(wellLogDataCommon PUBLIC mpir)
	target_compile_definitions(wellLogDataCommon PUBLIC _USE_MATH_DEFINES)
else()
	if(NOT(CMAKE_CXX_COMPILER_ID MATCHES "Intel"))
		target_compile_features(wellLogDataCommon PUBLIC cxx_rvalue_references)
	else()
		target_compile_options(wellLogDataCommon PUBLIC "-std=c++11" "-fPIC")
	endif()
endif()
