cmake_minimum_required(VERSION 3.1)
set(CppFiles register.cpp basicFilterRPackage.cpp fearnheadFilterRPackage.cpp withoutReplacementRPackage.cpp)
set(HeaderFiles basicFilterRPackage.h fearnheadFilterRPackage.h withoutReplacementRPackage.h)
add_library(wellLogDataRPackage SHARED ${CppFiles} ${HeaderFiles})
target_link_libraries(wellLogDataRPackage PUBLIC wellLogDataCommon Rcpp)
set_target_properties(wellLogDataRPackage PROPERTIES OUTPUT_NAME "wellLogData")
target_compile_definitions(wellLogDataRPackage PRIVATE CUSTOM_STATIC_RCPP)

if(WIN32)
	target_compile_definitions(wellLogDataRPackage PUBLIC _CRT_SECURE_NO_WARNINGS)
	target_link_libraries(wellLogDataRPackage PRIVATE "${CMAKE_BINARY_DIR}/RPackage/R.lib")
	foreach(BUILD_TYPE IN LISTS CMAKE_CONFIGURATION_TYPES)
		string(TOUPPER "${BUILD_TYPE}" UPPER_BUILD_TYPE)
		if(CMAKE_SIZEOF_VOID_P EQUAL 8)
			set_target_properties(wellLogDataRPackage PROPERTIES RUNTIME_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} ${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/inst/libs/x64 PDB_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} ${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/inst/libs/x64)
		else()
			set_target_properties(wellLogDataRPackage PROPERTIES RUNTIME_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} ${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/inst/libs/i386 PDB_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} ${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/inst/libs/i386)
		endif()
	endforeach()
else()
	set_target_properties(wellLogDataRPackage PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/RPackage/src)
	set_target_properties(wellLogDataRPackage PROPERTIES PREFIX "")
endif()
